colcon_ws/log/build_2022-09-13_03-39-12/gatekeeper/stdout_stderr.log
[35m[1mScanning dependencies of target gatekeeper[0m
[ 40%] Built target nominal_controller
[ 60%] [32mBuilding CXX object CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o[0m
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::nominalTraj_callback(dasc_msgs::msg::QuadTrajectory_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:126:34: error: ‘const SharedPtr’ {aka ‘const class std::shared_ptr<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’} has no member named ‘ts’
  126 |     com_msg.ts.push_back(nom_msg.ts[i]);
      |                                  ^~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:127:34: error: ‘const SharedPtr’ {aka ‘const class std::shared_ptr<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’} has no member named ‘xs’
  127 |     com_msg.xs.push_back(nom_msg.xs[i]);
      |                                  ^~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:128:34: error: ‘const SharedPtr’ {aka ‘const class std::shared_ptr<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’} has no member named ‘ys’
  128 |     com_msg.ys.push_back(nom_msg.ys[i]);
      |                                  ^~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:129:34: error: ‘const SharedPtr’ {aka ‘const class std::shared_ptr<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’} has no member named ‘zs’
  129 |     com_msg.zs.push_back(nom_msg.zs[i]);
      |                                  ^~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:130:35: error: ‘const SharedPtr’ {aka ‘const class std::shared_ptr<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’} has no member named ‘vxs’
  130 |     com_msg.vxs.push_back(nom_msg.vxs[i]);
      |                                   ^~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:131:35: error: ‘const SharedPtr’ {aka ‘const class std::shared_ptr<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’} has no member named ‘vys’
  131 |     com_msg.vys.push_back(nom_msg.vys[i]);
      |                                   ^~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:132:35: error: ‘const SharedPtr’ {aka ‘const class std::shared_ptr<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’} has no member named ‘vzs’
  132 |     com_msg.vzs.push_back(nom_msg.vzs[i]);
      |                                   ^~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:133:36: error: ‘const SharedPtr’ {aka ‘const class std::shared_ptr<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’} has no member named ‘yaws’
  133 |     com_msg.yaws.push_back(nom_msg.yaws[i]);
      |                                    ^~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
